# linenoise

./: .gitignore  CMakeLists.txt  default.nix
src/: example.cpp  linenoise.cpp
